--- a/style.css
+++ b/style.css
@@ -4,6 +4,37 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+html{
+	overflow-x: hidden;
+}
+/* scroll to top */
+.to-top{
+	background-color: orange;
+	position: fixed;
+	width: 50px;
+	height: 50px;
+	bottom: 16px;
+	right: 32px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+	color: #fff;
+	text-decoration: none;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 0.4s;
+}
+.to-top.active{
+	bottom: 32px;
+	pointer-events: auto;
+	opacity: 1;
+}
+/* scroll to top */
+
+
+
 
 #header{
 	height: 100vh;
@@ -710,6 +741,7 @@ footer .menu-list li a{
 	}
 
 	/*home*/
+	
 	.home-lfet{
 		flex-basis: 100%;
 		width: 90%;
@@ -971,5 +1003,6 @@ footer .menu-list li a{
 	}
 	/*--------Download ANd footer section end-----------*/
 
-
+	
 }
+
